5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4013/executions/1791_3124.log
== TEST (2019-05-29 14:37:04) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de n numeros:")))
i = 0
acum = 0
while(i <= size(v) - 1):
	m = (v[i] * 1) ** 1/2
	acum = acum + v[i]
print(round(acum,2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:37:23) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de n numeros:")))
i = 0
acum = 0
while(i <= size(v) - 1):
	m = (v[i] * 1) ** 1/2
	acum = acum + v[i]
print(round(m,2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:37:45) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de n numeros:")))
i = 0
acum = 0
while(i <= size(v) - 1):
	m = (v[i] * 1) ** 1/2
	acum = acum + v[i]
print(round(acum,2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:37:50) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de n numeros:")))
i = 0
acum = 0
while(i <= size(v) - 1):
	m = (v[i] * 1) ** 1/2
	acum = acum + v[i]
print(round(acum,2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:39:03) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de n numeros:")))
i = 0
acum = 0
while(i <= size(v) - 1):
	m = (v[i] * 1) ** 1/2
	acum = acum + m
	i = i + 1
print(round(acum,2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:40:16) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de n numeros:")))
i = 0
acum = 0
while(i <= size(v) - 1):
	m = (v[i] * (v[i] + 1)) ** 1/2
	acum = acum + m
	i = i + 1
print(round(acum,2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:40:22) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de n numeros:")))
i = 0
acum = 0
while(i <= size(v) - 1):
	m = (v[i] * (v[i] + 1)) ** 1/2
	acum = acum + m
	i = i + 1
print(round(acum,2))	
-- EXECUTION TIME:
1.09769
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.44
---- user output:
115.18
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.29
---- user output:
66.6
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.72
---- user output:
36.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:40:22) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de n numeros:")))
i = 0
acum = 0
while(i <= size(v) - 1):
	m = (v[i] * (v[i] + 1)) ** 1/2
	acum = acum + m
	i = i + 1
print(round(acum,2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:41:01) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de n numeros:")))
i = 0

while(i <= size(v) - 1):
	m = (v[i] * (v[i] + 1)) ** 1/2
	
	i = i + 1
print(round(m,2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:42:33) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de n numeros:")))
i = 0


while(i <= size(v) - 1):
	m = (v[i] * (v[i] + 1)) ** 1/2
	
	i = i + 1
print(round(m,2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:43:38) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de n numeros:")))
i = 0
acum = 0

while(i <= size(v) - 1):
	m = (v[i] * (v[i] + 1)) ** 1/2
	acum =  acum + m
	i = i + 1
print(round(m,2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:43:44) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de n numeros:")))
i = 0
acum = 0

while(i <= size(v) - 1):
	m = (v[i] * (v[i] + 1)) ** 1/2
	acum =  acum + m
	i = i + 1
print(round(acumm,2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:43:48) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de n numeros:")))
i = 0
acum = 0

while(i <= size(v) - 1):
	m = (v[i] * (v[i] + 1)) ** 1/2
	acum =  acum + m
	i = i + 1
print(round(acum,2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:45:02) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de n numeros:")))
i = 0
acum = 0
while(i <= size(v) - 1):
	m = (v[i] * 1) ** 1/2
	acum = acum + v[i]
print(round(acum,2))
	
-- EXECUTION TIME:
435.324
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:45:15) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de n numeros:")))
i = 0


while(i <= size(v) - 1):
	m = (v[i] * (v[i + 1])) ** 1/2
	i = i + 1
print(round(m,2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:47:05) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de n numeros:")))
i = 0


while(i <= size(v) - 1):
	m = (v[i] * v[i]) ** 1/2
	i = i + 1
print(round(m,2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:48:14) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de n numeros:")))
i = 0


while(i <= size(v) - 1):
	m = (v[i] * v[i]) ** 1/2
	i = i + 1
print(round(m,2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:49:14) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de n numeros:")))
i = 1


while(i <= size(v) - 1):
	m = (v[0] * v[i]) ** 1/2
	i = i + 1
print(round(m,2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:49:42) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de n numeros:")))
i = 1


while(i <= size(v) - 1):
	m = (v[0] * v[i]) ** 1/2
	i = i + 1
print(round(m,2))	
-- EXECUTION TIME:
0.518514
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.44
---- user output:
7.5
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.29
---- user output:
3.63
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.72
---- user output:
2.8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:49:44) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de n numeros:")))
i = 1


while(i <= size(v) - 1):
	m = (v[0] * v[i]) ** 1/2
	i = i + 1
print(round(m,2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:49:44) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de n numeros:")))
i = 1


while(i <= size(v) - 1):
	m = (v[0] * v[i]) ** 1/2
	i = i + 1
print(round(m,2))	
-- EXECUTION TIME:
0.343951
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.44
---- user output:
7.5
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.29
---- user output:
3.63
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.72
---- user output:
vetor de n numeros:2.8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:50:39) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de n numeros:")))
i = 1


while(i <= size(v) - 1):
	m = (v[0] * v[i] * v[-1]) ** 1/2
	i = i + 1
print(round(m,2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:51:02) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de n numeros:")))
i = 1


while(i <= size(v) - 1):
	m = (v[0] * v[i] * v[-1]) ** 1/2
	i = i + 1
print(round(m,2))	
-- EXECUTION TIME:
0.414972
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.44
---- user output:
59.29
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.29
---- user output:
59.29
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.72
---- user output:
14.31
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:51:06) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de n numeros:")))
i = 1


while(i <= size(v) - 1):
	m = (v[0] * v[i] * v[-1]) ** 1/2
	i = i + 1
print(round(m,2))	
-- EXECUTION TIME:
2.54121
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.44
---- user output:
59.29
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.29
---- user output:
23.96
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.72
---- user output:
14.31
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:51:06) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de n numeros:")))
i = 1


while(i <= size(v) - 1):
	m = (v[0] * v[i] * v[-1]) ** 1/2
	i = i + 1
print(round(m,2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:51:07) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de n numeros:")))
i = 1


while(i <= size(v) - 1):
	m = (v[0] * v[i] * v[-1]) ** 1/2
	i = i + 1
print(round(m,2))	
-- EXECUTION TIME:
1.86261
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.44
---- user output:
59.29
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.29
---- user output:
23.96
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.72
---- user output:
14.31
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:51:07) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de n numeros:")))
i = 1


while(i <= size(v) - 1):
	m = (v[0] * v[i] * v[-1]) ** 1/2
	i = i + 1
print(round(m,2))	
-- EXECUTION TIME:
2.79703
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.44
---- user output:
59.29
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.29
---- user output:
23.96
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.72
---- user output:
14.31
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:51:07) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de n numeros:")))
i = 1


while(i <= size(v) - 1):
	m = (v[0] * v[i] * v[-1]) ** 1/2
	i = i + 1
print(round(m,2))	
-- EXECUTION TIME:
3.38474
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.44
---- user output:
59.29
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.29
---- user output:
59.29
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.72
---- user output:
14.31
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:51:08) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de n numeros:")))
i = 1


while(i <= size(v) - 1):
	m = (v[0] * v[i] * v[-1]) ** 1/2
	i = i + 1
print(round(m,2))	
-- EXECUTION TIME:
3.14225
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.44
---- user output:
59.29
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.29
---- user output:
23.96
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.72
---- user output:
vetor de n numeros:14.31
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:51:08) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de n numeros:")))
i = 1


while(i <= size(v) - 1):
	m = (v[0] * v[i] * v[-1]) ** 1/2
	i = i + 1
print(round(m,2))	
-- EXECUTION TIME:
2.368
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.44
---- user output:
59.29
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.29
---- user output:
23.96
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.72
---- user output:
vetor de n numeros:14.31
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:52:18) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de n numeros:")))
i = 1


while(i <= size(v) - 1):
	m = (v[0] * v[i] 
	m = (m * (v[-1]))**1/2
	i = i + 1
print(round(m,2))	
-- ERROR:
File "XXXX", line 8
    m = (m * (v[-1]))**1/2
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:52:49) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de n numeros:")))
i = 1


while(i <= size(v) - 1):
	m = v[0] * v[i] 
	m = (m * v[-1])**1/2
	i = i + 1
print(round(m,2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:53:03) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de n numeros:")))
i = 1


while(i <= size(v) - 1):
	m = v[0] * v[i] 
	m = (m * v[-1])**1/2
	i = i + 1
print(round(m,2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:53:40) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de n numeros:")))
i = 1


while(i >= size(v) - 1):
	m = v[0] * v[i] 
	m = (m * v[-1])**1/2
	i = i + 1
print(round(m,2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:53:43) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de n numeros:")))
i = 1


while(i >= size(v) - 1):
	m = v[0] * v[i] 
	m = (m * v[-1])**1/2
	i = i + 1
print(round(m,2))	
-- EXECUTION TIME:
0.61113
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/3124/main.py", line 10, in <module>
    print(round(m,2))	
NameError: name 'm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:53:44) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de n numeros:")))
i = 1


while(i >= size(v) - 1):
	m = v[0] * v[i] 
	m = (m * v[-1])**1/2
	i = i + 1
print(round(m,2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:53:45) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de n numeros:")))
i = 1


while(i >= size(v) - 1):
	m = v[0] * v[i] 
	m = (m * v[-1])**1/2
	i = i + 1
print(round(m,2))	
-- EXECUTION TIME:
0.291976
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/3124/main.py", line 10, in <module>
    print(round(m,2))	
NameError: name 'm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:54:37) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de n numeros:")))
i = 1
m = 0

while(i >= size(v) - 1):
	m =  m + (v[0] * v[i]) 
	m = (m * v[-1])**1/2
	i = i + 1
print(round(m,2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:54:40) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de n numeros:")))
i = 1
m = 0

while(i >= size(v) - 1):
	m =  m + (v[0] * v[i]) 
	m = (m * v[-1])**1/2
	i = i + 1
print(round(m,2))	
-- EXECUTION TIME:
0.304811
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.44
---- user output:
0
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.29
---- user output:
0
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.72
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:54:41) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de n numeros:")))
i = 1
m = 0

while(i >= size(v) - 1):
	m =  m + (v[0] * v[i]) 
	m = (m * v[-1])**1/2
	i = i + 1
print(round(m,2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:54:43) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de n numeros:")))
i = 1
m = 0

while(i >= size(v) - 1):
	m =  m + (v[0] * v[i]) 
	m = (m * v[-1])**1/2
	i = i + 1
print(round(m,2))	
-- EXECUTION TIME:
0.622721
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.44
---- user output:
0
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.29
---- user output:
vetor de n numeros:0
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.72
---- user output:
vetor de n numeros:0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:54:44) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de n numeros:")))
i = 1
m = 0

while(i >= size(v) - 1):
	m =  m + (v[0] * v[i]) 
	m = (m * v[-1])**1/2
	i = i + 1
print(round(m,2))	
-- EXECUTION TIME:
1.0928
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.44
---- user output:
vetor de n numeros:0
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.29
---- user output:
vetor de n numeros:0
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.72
---- user output:
vetor de n numeros:0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:55:39) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de n numeros:")))
i = 1
m = 0

while(i >= size(v) - 1):
	m =  m + (v[0] * v[i] * v[-1])**1/2 
	i = i + 1
print(round(m,2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:56:15) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de n numeros:")))
i = 1
m = 0

while(i >= size(v) - 1):
	m =  m + (v[0] * v[i] * v[size(v) -1])**1/2 
	i = i + 1
print(round(m,2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:56:24) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de n numeros:")))
i = 1
m = 0

while(i >= size(v) - 1):
	m =  m + (v[0] * v[i] * v[size(v) -1])**1/2 
	i = i + 1
print(round(m,2))	
-- EXECUTION TIME:
0.525845
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.44
---- user output:
0
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.29
---- user output:
0
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.72
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:56:24) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de n numeros:")))
i = 1
m = 0

while(i >= size(v) - 1):
	m =  m + (v[0] * v[i] * v[size(v) -1])**1/2 
	i = i + 1
print(round(m,2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:56:24) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de n numeros:")))
i = 1
m = 0

while(i >= size(v) - 1):
	m =  m + (v[0] * v[i] * v[size(v) -1])**1/2 
	i = i + 1
print(round(m,2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:56:24) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de n numeros:")))
i = 1
m = 0

while(i >= size(v) - 1):
	m =  m + (v[0] * v[i] * v[size(v) -1])**1/2 
	i = i + 1
print(round(m,2))	
-- EXECUTION TIME:
2.6693
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.44
---- user output:
0
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.29
---- user output:
0
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.72
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:56:24) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de n numeros:")))
i = 1
m = 0

while(i >= size(v) - 1):
	m =  m + (v[0] * v[i] * v[size(v) -1])**1/2 
	i = i + 1
print(round(m,2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:56:25) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de n numeros:")))
i = 1
m = 0

while(i >= size(v) - 1):
	m =  m + (v[0] * v[i] * v[size(v) -1])**1/2 
	i = i + 1
print(round(m,2))	
-- EXECUTION TIME:
1.45006
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.44
---- user output:
0
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.29
---- user output:
0
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.72
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:56:26) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de n numeros:")))
i = 1
m = 0

while(i >= size(v) - 1):
	m =  m + (v[0] * v[i] * v[size(v) -1])**1/2 
	i = i + 1
print(round(m,2))	
-- EXECUTION TIME:
2.19538
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.44
---- user output:
0
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.29
---- user output:
0
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.72
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:56:27) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de n numeros:")))
i = 1
m = 0

while(i >= size(v) - 1):
	m =  m + (v[0] * v[i] * v[size(v) -1])**1/2 
	i = i + 1
print(round(m,2))	
-- EXECUTION TIME:
2.7295
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.44
---- user output:
0
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.29
---- user output:
0
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.72
---- user output:
vetor de n numeros:0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:56:29) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de n numeros:")))
i = 1
m = 0

while(i >= size(v) - 1):
	m =  m + (v[0] * v[i] * v[size(v) -1])**1/2 
	i = i + 1
print(round(m,2))	
-- EXECUTION TIME:
4.41436
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.44
---- user output:
0
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.29
---- user output:
0
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.72
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:56:33) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de n numeros:")))
i = 1
m = 0

while(i >= size(v) - 1):
	m =  m + (v[0] * v[i] * v[size(v) -1])**1/2 
	i = i + 1
print(round(m,2))	
-- EXECUTION TIME:
3.42882
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.44
---- user output:
0
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.29
---- user output:
0
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.72
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:56:33) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de n numeros:")))
i = 1
m = 0

while(i >= size(v) - 1):
	m =  m + (v[0] * v[i] * v[size(v) -1])**1/2 
	i = i + 1
print(round(m,2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:56:33) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de n numeros:")))
i = 1
m = 0

while(i >= size(v) - 1):
	m =  m + (v[0] * v[i] * v[size(v) -1])**1/2 
	i = i + 1
print(round(m,2))	
-- EXECUTION TIME:
3.90553
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.44
---- user output:
0
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.29
---- user output:
0
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.72
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:56:33) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de n numeros:")))
i = 1
m = 0

while(i >= size(v) - 1):
	m =  m + (v[0] * v[i] * v[size(v) -1])**1/2 
	i = i + 1
print(round(m,2))	
-- EXECUTION TIME:
2.84451
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.44
---- user output:
0
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.29
---- user output:
0
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.72
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:56:34) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de n numeros:")))
i = 1
m = 0

while(i >= size(v) - 1):
	m =  m + (v[0] * v[i] * v[size(v) -1])**1/2 
	i = i + 1
print(round(m,2))	
-- EXECUTION TIME:
2.51197
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.44
---- user output:
0
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.29
---- user output:
0
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.72
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:56:34) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de n numeros:")))
i = 1
m = 0

while(i >= size(v) - 1):
	m =  m + (v[0] * v[i] * v[size(v) -1])**1/2 
	i = i + 1
print(round(m,2))	
-- EXECUTION TIME:
3.53726
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.44
---- user output:
0
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.29
---- user output:
0
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.72
---- user output:
vetor de n numeros:0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:56:35) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de n numeros:")))
i = 1
m = 0

while(i >= size(v) - 1):
	m =  m + (v[0] * v[i] * v[size(v) -1])**1/2 
	i = i + 1
print(round(m,2))	
-- EXECUTION TIME:
2.50703
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.44
---- user output:
0
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.29
---- user output:
0
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.72
---- user output:
vetor de n numeros:0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:57:45) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de n numeros:")))
i = 1


while(i >= size(v) - 1):
	m = (v[0] * v[i] * v[size(v) -1])**1/2 
	i = i + 1

print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:58:21) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de n numeros:")))
i = 1

while(i >= size(v) - 1):
	m = (v[0] * v[i] * v[-1])**1/2 
	i = i + 1
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:58:27) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de n numeros:")))
i = 1

while(i >= size(v) - 1):
	m = (v[0] * v[i] * v[-1])**1/2 
	i = i + 1
print(round(m,2))
-- EXECUTION TIME:
0.528534
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/3124/main.py", line 8, in <module>
    print(round(m,2))
NameError: name 'm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:58:27) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de n numeros:")))
i = 1

while(i >= size(v) - 1):
	m = (v[0] * v[i] * v[-1])**1/2 
	i = i + 1
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:58:27) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de n numeros:")))
i = 1

while(i >= size(v) - 1):
	m = (v[0] * v[i] * v[-1])**1/2 
	i = i + 1
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:58:27) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de n numeros:")))
i = 1

while(i >= size(v) - 1):
	m = (v[0] * v[i] * v[-1])**1/2 
	i = i + 1
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:58:27) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de n numeros:")))
i = 1

while(i >= size(v) - 1):
	m = (v[0] * v[i] * v[-1])**1/2 
	i = i + 1
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:58:29) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de n numeros:")))
i = 1

while(i >= size(v) - 1):
	m = (v[0] * v[i] * v[-1])**1/2 
	i = i + 1
print(round(m,2))
-- EXECUTION TIME:
2.06
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/3124/main.py", line 8, in <module>
    print(round(m,2))
NameError: name 'm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:58:31) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de n numeros:")))
i = 1

while(i >= size(v) - 1):
	m = (v[0] * v[i] * v[-1])**1/2 
	i = i + 1
print(round(m,2))
-- EXECUTION TIME:
2.64606
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/3124/main.py", line 8, in <module>
    print(round(m,2))
NameError: name 'm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:58:31) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de n numeros:")))
i = 1

while(i >= size(v) - 1):
	m = (v[0] * v[i] * v[-1])**1/2 
	i = i + 1
print(round(m,2))
-- EXECUTION TIME:
2.52779
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/3124/main.py", line 8, in <module>
    print(round(m,2))
NameError: name 'm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:58:32) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de n numeros:")))
i = 1

while(i >= size(v) - 1):
	m = (v[0] * v[i] * v[-1])**1/2 
	i = i + 1
print(round(m,2))
-- EXECUTION TIME:
2.98615
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/3124/main.py", line 8, in <module>
    print(round(m,2))
NameError: name 'm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:58:33) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de n numeros:")))
i = 1

while(i >= size(v) - 1):
	m = (v[0] * v[i] * v[-1])**1/2 
	i = i + 1
print(round(m,2))
-- EXECUTION TIME:
2.75388
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/3124/main.py", line 8, in <module>
    print(round(m,2))
NameError: name 'm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:58:37) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de n numeros:")))
i = 1

while(i >= size(v) - 1):
	m = (v[0] * v[i] * v[-1])**1/2 
	i = i + 1
print(round(m,2))
-- EXECUTION TIME:
3.45766
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/3124/main.py", line 8, in <module>
    print(round(m,2))
NameError: name 'm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:58:37) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de n numeros:")))
i = 1

while(i >= size(v) - 1):
	m = (v[0] * v[i] * v[-1])**1/2 
	i = i + 1
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:58:38) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de n numeros:")))
i = 1

while(i >= size(v) - 1):
	m = (v[0] * v[i] * v[-1])**1/2 
	i = i + 1
print(round(m,2))
-- EXECUTION TIME:
3.13014
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/3124/main.py", line 8, in <module>
    print(round(m,2))
NameError: name 'm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:58:39) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de n numeros:")))
i = 1

while(i >= size(v) - 1):
	m = (v[0] * v[i] * v[-1])**1/2 
	i = i + 1
print(round(m,2))
-- EXECUTION TIME:
2.20313
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/3124/main.py", line 8, in <module>
    print(round(m,2))
NameError: name 'm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:58:39) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de n numeros:")))
i = 1

while(i >= size(v) - 1):
	m = (v[0] * v[i] * v[-1])**1/2 
	i = i + 1
print(round(m,2))
-- EXECUTION TIME:
2.22147
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/3124/main.py", line 8, in <module>
    print(round(m,2))
NameError: name 'm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:58:39) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de n numeros:")))
i = 1

while(i >= size(v) - 1):
	m = (v[0] * v[i] * v[-1])**1/2 
	i = i + 1
print(round(m,2))
-- EXECUTION TIME:
2.78706
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/3124/main.py", line 8, in <module>
    print(round(m,2))
NameError: name 'm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:58:40) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de n numeros:")))
i = 1

while(i >= size(v) - 1):
	m = (v[0] * v[i] * v[-1])**1/2 
	i = i + 1
print(round(m,2))
-- EXECUTION TIME:
2.91188
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/3124/main.py", line 8, in <module>
    print(round(m,2))
NameError: name 'm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:58:46) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de n numeros:")))
i = 1

while(i >= size(v) - 1):
	m = (v[0] * v[i] * v[-1])**1/2 
	i = i + 1
print(round(m,2))
-- EXECUTION TIME:
2.92251
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/3124/main.py", line 8, in <module>
    print(round(m,2))
NameError: name 'm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:58:47) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de n numeros:")))
i = 1

while(i >= size(v) - 1):
	m = (v[0] * v[i] * v[-1])**1/2 
	i = i + 1
print(round(m,2))
-- EXECUTION TIME:
3.33852
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/3124/main.py", line 8, in <module>
    print(round(m,2))
NameError: name 'm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:58:47) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de n numeros:")))
i = 1

while(i >= size(v) - 1):
	m = (v[0] * v[i] * v[-1])**1/2 
	i = i + 1
print(round(m,2))
-- EXECUTION TIME:
2.72326
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/3124/main.py", line 8, in <module>
    print(round(m,2))
NameError: name 'm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:58:47) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de n numeros:")))
i = 1

while(i >= size(v) - 1):
	m = (v[0] * v[i] * v[-1])**1/2 
	i = i + 1
print(round(m,2))
-- EXECUTION TIME:
2.66015
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/3124/main.py", line 8, in <module>
    print(round(m,2))
NameError: name 'm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:58:47) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de n numeros:")))
i = 1

while(i >= size(v) - 1):
	m = (v[0] * v[i] * v[-1])**1/2 
	i = i + 1
print(round(m,2))
-- EXECUTION TIME:
2.62378
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/3124/main.py", line 8, in <module>
    print(round(m,2))
NameError: name 'm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:58:48) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de n numeros:")))
i = 1

while(i >= size(v) - 1):
	m = (v[0] * v[i] * v[-1])**1/2 
	i = i + 1
print(round(m,2))
-- EXECUTION TIME:
2.32769
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/3124/main.py", line 8, in <module>
    print(round(m,2))
NameError: name 'm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:58:54) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de n numeros:")))
i = 1

while(i >= size(v) - 1):
	m = (v[0] * v[i] * v[-1])**1/2 
	i = i + 1
print(round(m,2))
-- EXECUTION TIME:
2.22807
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/3124/main.py", line 8, in <module>
    print(round(m,2))
NameError: name 'm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:58:54) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de n numeros:")))
i = 1

while(i >= size(v) - 1):
	m = (v[0] * v[i] * v[-1])**1/2 
	i = i + 1
print(round(m,2))
-- EXECUTION TIME:
1.92629
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/3124/main.py", line 8, in <module>
    print(round(m,2))
NameError: name 'm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:58:55) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de n numeros:")))
i = 1

while(i >= size(v) - 1):
	m = (v[0] * v[i] * v[-1])**1/2 
	i = i + 1
print(round(m,2))
-- EXECUTION TIME:
2.52424
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/3124/main.py", line 8, in <module>
    print(round(m,2))
NameError: name 'm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:58:56) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de n numeros:")))
i = 1

while(i >= size(v) - 1):
	m = (v[0] * v[i] * v[-1])**1/2 
	i = i + 1
print(round(m,2))
-- EXECUTION TIME:
2.82189
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/3124/main.py", line 8, in <module>
    print(round(m,2))
NameError: name 'm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:58:56) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de n numeros:")))
i = 1

while(i >= size(v) - 1):
	m = (v[0] * v[i] * v[-1])**1/2 
	i = i + 1
print(round(m,2))
-- EXECUTION TIME:
2.83376
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/3124/main.py", line 8, in <module>
    print(round(m,2))
NameError: name 'm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:58:56) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de n numeros:")))
i = 1

while(i >= size(v) - 1):
	m = (v[0] * v[i] * v[-1])**1/2 
	i = i + 1
print(round(m,2))
-- EXECUTION TIME:
2.52766
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/3124/main.py", line 8, in <module>
    print(round(m,2))
NameError: name 'm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:58:59) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de n numeros:")))
i = 1

while(i >= size(v) - 1):
	m = (v[0] * v[i] * v[-1])**1/2 
	i = i + 1
print(round(m,2))
-- EXECUTION TIME:
0.222558
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1791/3124/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:58:59) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de n numeros:")))
i = 1

while(i >= size(v) - 1):
	m = (v[0] * v[i] * v[-1])**1/2 
	i = i + 1
print(round(m,2))
-- EXECUTION TIME:
2.49508
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/3124/main.py", line 8, in <module>
    print(round(m,2))
NameError: name 'm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:59:00) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de n numeros:")))
i = 1

while(i >= size(v) - 1):
	m = (v[0] * v[i] * v[-1])**1/2 
	i = i + 1
print(round(m,2))
-- EXECUTION TIME:
2.41169
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/3124/main.py", line 8, in <module>
    print(round(m,2))
NameError: name 'm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:59:00) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de n numeros:")))
i = 1

while(i >= size(v) - 1):
	m = (v[0] * v[i] * v[-1])**1/2 
	i = i + 1
print(round(m,2))
-- EXECUTION TIME:
1.71552
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/3124/main.py", line 8, in <module>
    print(round(m,2))
NameError: name 'm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:13:16) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de n numeros:")))
i = 1

while(i >= size(v) - 1):
	m = (v[0] * v[i])**1/2 
	i = i + 1
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:14:06) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de n numeros:")))
i = 1

while(i >= size(v) - 1):
	m = (v[0] * v[i])**1/2 
	i = i + 1
	print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:14:09) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de n numeros:")))
i = 1

while(i >= size(v) - 1):
	m = (v[0] * v[i])**1/2 
	i = i + 1
	print(round(m,2))
-- EXECUTION TIME:
0.356449
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.44
---- user output:

-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.29
---- user output:

-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.72
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:14:12) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de n numeros:")))
i = 1

while(i >= size(v) - 1):
	m = (v[0] * v[i])**1/2 
	i = i + 1
	print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
